Updated icclim scripts and ilamb config
icclim scripts updated to use correct case and rerun to re-order percentile calculations (time, lat, lon) instead of (lat, lon, time)

--- a/bxn599/ilamb/all_vars.cfg
+++ b/bxn599/ilamb/all_vars.cfg
@@ -426,6 +426,102 @@ land       = True
 weight     = 20
 space_mean = True
 
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+[h2: No. days when daily rainfall > 75th percentile]
+variable = "R75p"
+alternate_vars = "r75p","R75P"
+weight   = 2
+cmap     = "inferno"
+
+[AGCDv1]
+source        = "DATA/r75p/AGCDv1/AGCDv1_r75p_19850101-20141231.nc"
+land          = True
+weight        = 20
+
+[ERA5]
+source        = "DATA/r75p/ERA5/ERA5_r75p_19850101-20141231.nc"
+weight        = 20
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+[h2: Precipitation fraction due to days when daily rainfall > 75th percentile]
+variable = "R75pTOT"
+alternate_vars = "R75PTOT"
+weight   = 2
+cmap     = "inferno"
+
+[AGCDv1]
+source        = "DATA/R75pTOT/AGCDv1/AGCDv1_R75pTOT_19850101-20141231.nc"
+land          = True
+weight        = 20
+
+[ERA5]
+source        = "DATA/R75pTOT/ERA5/ERA5_R75pTOT_19850101-20141231.nc"
+weight        = 20
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+[h2: No. days when daily rainfall > 95th percentile]
+variable = "R95p"
+alternate_vars = "r95p","R95P"
+weight   = 2
+cmap     = "inferno"
+
+[AGCDv1]
+source        = "DATA/r95p/AGCDv1/AGCDv1_r95p_19850101-20141231.nc"
+land          = True
+weight        = 20
+
+[ERA5]
+source        = "DATA/r95p/ERA5/ERA5_r95p_19850101-20141231.nc"
+weight        = 20
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+[h2: Precipitation fraction due to days when daily rainfall > 95th percentile]
+variable = "R95pTOT"
+alternate_vars = "R95PTOT"
+weight   = 2
+cmap     = "inferno"
+
+[AGCDv1]
+source        = "DATA/R95pTOT/AGCDv1/AGCDv1_R95pTOT_19850101-20141231.nc"
+land          = True
+weight        = 20
+
+[ERA5]
+source        = "DATA/R95pTOT/ERA5/ERA5_R95pTOT_19850101-20141231.nc"
+weight        = 20
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+[h2: No. days when daily rainfall > 99th percentile]
+variable = "R99p"
+alternate_vars = "r99p","R99P"
+weight   = 2
+cmap     = "inferno"
+
+[AGCDv1]
+source        = "DATA/r99p/AGCDv1/AGCDv1_r99p_19850101-20141231.nc"
+land          = True
+weight        = 20
+
+[ERA5]
+source        = "DATA/r99p/ERA5/ERA5_r99p_19850101-20141231.nc"
+weight        = 20
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+[h2: Precipitation fraction due to days when daily rainfall > 99th percentile]
+variable = "R99pTOT"
+alternate_vars = "R99PTOT"
+weight   = 2
+cmap     = "inferno"
+
+[AGCDv1]
+source        = "DATA/R99pTOT/AGCDv1/AGCDv1_R99pTOT_19850101-20141231.nc"
+land          = True
+weight        = 20
+
+[ERA5]
+source        = "DATA/R99pTOT/ERA5/ERA5_R99pTOT_19850101-20141231.nc"
+weight        = 20
+
 ###########################################################################
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -741,7 +837,7 @@ source        = "DATA/tn/ERA5/ERA5_tn_19850101-20141231.nc"
 weight 				= 20
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-[h2: 90th percentile of Daily Maximum Temperature]
+[h2: No. days when Daily Maximum Temperature > 90th percentile]
 variable = "TX90p"
 alternate_vars = "tx90p","TX90P"
 weight   = 2
@@ -755,6 +851,76 @@ weight 				= 20
 [ERA5]
 source        = "DATA/tx90p/ERA5/ERA5_tx90p_19850101-20141231.nc"
 weight 				= 20
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+[h2: No. days when Daily Maximum Temperature < 10th percentile]
+variable = "TX10p"
+alternate_vars = "tx10p","TX10P"
+weight   = 2
+cmap     = "inferno"
+
+[AGCDv1]
+source        = "DATA/tx10p/AGCDv1/AGCDv1_tx10p_19850101-20141231.nc"
+land          = True
+weight        = 20
+
+[ERA5]
+source        = "DATA/tx10p/ERA5/ERA5_tx10p_19850101-20141231.nc"
+weight        = 20
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+[h2: No. days when Daily Minimum Temperature > 90th percentile]
+variable = "TN90p"
+alternate_vars = "tn90p","TN90P"
+weight   = 2
+cmap     = "inferno"
+
+[AGCDv1]
+source        = "DATA/tn90p/AGCDv1/AGCDv1_tn90p_19850101-20141231.nc"
+land          = True
+weight        = 20
+
+[ERA5]
+source        = "DATA/tn90p/ERA5/ERA5_tn90p_19850101-20141231.nc"
+weight        = 20
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+[h2: No. days when Daily Minimum Temperature < 10th percentile]
+variable = "TN10p"
+alternate_vars = "tn10p","TN10P"
+weight   = 2
+cmap     = "inferno"
+
+[AGCDv1]
+source        = "DATA/tn10p/AGCDv1/AGCDv1_tn10p_19850101-20141231.nc"
+land          = True
+weight        = 20
+
+[ERA5]
+source        = "DATA/tn10p/ERA5/ERA5_tn10p_19850101-20141231.nc"
+weight        = 20
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+[h2: No. days when Daily Mean Temperature > 90th percentile]
+variable = "TG90p"
+alternate_vars = "tg90p","TG90P"
+weight   = 2
+cmap     = "inferno"
+
+[ERA5]
+source        = "DATA/tg90p/ERA5/ERA5_tg90p_19850101-20141231.nc"
+weight        = 20
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+[h2: No. days when Daily Mean Temperature < 10th percentile]
+variable = "TG10p"
+alternate_vars = "tg10p","TG10P"
+weight   = 2
+cmap     = "inferno"
+
+[ERA5]
+source        = "DATA/tg10p/ERA5/ERA5_tg10p_19850101-20141231.nc"
+weight        = 20
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 [h2: 850 hPa Air Temperature]
