--- a/bxn599/ilamb/all_vars_all_models.cfg
+++ b/bxn599/ilamb/all_vars_all_models.cfg
@@ -6,8 +6,8 @@
 #
 # Extra ilamb-run options are defined here with the '#!' symbols:
 #
-###! define_regions = DATA/regions/BARPA-RLand.nc
-#! define_regions = DATA/regions/ccam_landmask.nc
+#! define_regions = DATA/regions/BARPA-RLand.nc
+#####! define_regions = DATA/regions/ccam_landmask.nc
 #
 ###########################################################################
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
