Updating user paths
Moved bxn599 user directory to xv83/users/bxn599, updating paths in scripts

--- a/bxn599/ilamb/all_vars_all_models_old_era5.cfg
+++ b/bxn599/ilamb/all_vars_all_models_old_era5.cfg
@@ -220,8 +220,8 @@ plot_unit  = "mm d-1"
 space_mean = True 
 
 [ERA5]
-source         = "DATA/pr/ERA5/pr_era5_moda_sfc_19590101-20220831.nc"
-override_units = "kg/m2/s"
+source         = "DATA/pr/ERA5/ERA5_pr.nc"
+override_units = "kg/m2/day"
 table_unit     = "mm d-1"
 plot_unit      = "mm d-1"
 space_mean     = True
@@ -552,7 +552,7 @@ cmap           = "Blues"
 weight 				 = 1 
 
 [ERA5]
-source        = "DATA/hus850/ERA5/hus850_era5_moda_pl_19590101-20220831.nc"
+source        = DATA/hus850/ERA5/ERA5_hus850.nc
 weight        = 1 
 relationships = "500hPaVerticalwind/ERA5","850hPaGeopotentialHeight/ERA5"
 
@@ -564,7 +564,7 @@ cmap 					 = "Blues"
 weight 				 = 1 
 
 [ERA5]
-source = "DATA/hus700/ERA5/hus700_era5_moda_pl_19590101-20220831.nc"
+source = DATA/hus700/ERA5/ERA5_hus700.nc
 weight = 1 
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -574,7 +574,7 @@ weight   = 1
 cmap     = "Blues"
 
 [ERA5]
-source = "DATA/hus600/ERA5/hus600_era5_moda_pl_19590101-20220831.nc"
+source = DATA/hus600/ERA5/ERA5_hus600.nc
 weight = 1 
 
 ###########################################################################
@@ -589,7 +589,7 @@ cmap     = "BrBG"
 weight   = 1 
 
 [ERA5]
-source = "DATA/omega500/ERA5/omega500_era5_moda_pl_19590101-20220831.nc"
+source = DATA/omega500/ERA5/ERA5_omega500.nc
 weight = 1 
 
 ###########################################################################
@@ -603,7 +603,7 @@ variable = psl
 cmap     = "viridis"
 
 [ERA5]
-source = "DATA/psl/ERA5/psl_era5_moda_sfc_19590101-20220831.nc"
+source = DATA/psl/ERA5/ERA5_psl.nc
 weight = 1 
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -612,7 +612,7 @@ variable = zg850
 cmap     = "viridis"
 
 [ERA5]
-source = "DATA/zg850/ERA5/zg850_era5_moda_pl_19590101-20220831.nc"
+source = DATA/zg850/ERA5/ERA5_zg850.nc
 weight = 1
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -621,16 +621,7 @@ variable = zg500
 cmap     = "viridis"
 
 [ERA5]
-source = "DATA/zg500/ERA5/zg500_era5_moda_pl_19590101-20220831.nc"
-weight = 1
-
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-[h2: 300 hPa Geopotential Height]
-variable = zg300
-cmap     = "viridis"
-
-[ERA5]
-source = "DATA/zg300/ERA5/zg300_era5_moda_pl_19590101-20220831.nc"
+source = DATA/zg500/ERA5/ERA5_zg500.nc
 weight = 1
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -639,7 +630,7 @@ variable = zg200
 cmap     = "viridis"
 
 [ERA5]
-source = "DATA/zg200/ERA5/zg200_era5_moda_pl_19590101-20220831.nc"
+source = DATA/zg200/ERA5/ERA5_zg200.nc
 weight = 1
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -651,14 +642,13 @@ bgcolor = E2F0CB
 variable       = "tas"
 cmap           = "inferno"
 weight         = 2
-alternate_vars = "tasmean"
 
 [CRU4.02]
 source = "DATA/tas/CRU4.02/tas.nc"
 weight = 25
 
 [ERA5]
-source = "DATA/tas/ERA5/tas_era5_moda_sfc_19590101-20220831.nc"
+source = "DATA/tas/ERA5/ERA5_tas.nc"
 weight = 25
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -939,7 +929,7 @@ weight   = 1
 cmap     = "inferno"
 
 [ERA5]
-source        = "DATA/ta850/ERA5/ta850_era5_moda_pl_19590101-20220831.nc"
+source        = DATA/ta850/ERA5/ERA5_ta850.nc
 weight 				= 1
 relationships = "500hPaVerticalwind/ERA5","850hPaSpecificHumidity/ERA5","850hPaGeopotentialHeight/ERA5"
 
@@ -950,7 +940,7 @@ weight   = 1
 cmap     = "inferno"
 
 [ERA5]
-source = "DATA/ta700/ERA5/ta700_era5_moda_pl_19590101-20220831.nc"
+source = DATA/ta700/ERA5/ERA5_ta700.nc
 weight = 1 
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -960,7 +950,7 @@ weight   = 1
 cmap     = "inferno"
 
 [ERA5]
-source = "DATA/ta600/ERA5/ta600_era5_moda_pl_19590101-20220831.nc"
+source = DATA/ta600/ERA5/ERA5_ta600.nc
 weight = 1 
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -970,7 +960,7 @@ weight   = 1
 cmap     = "inferno"
 
 [ERA5]
-source = "DATA/ta500/ERA5/ta500_era5_moda_pl_19590101-20220831.nc"
+source = DATA/ta500/ERA5/ERA5_ta500.nc
 weight = 1 
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -980,7 +970,7 @@ weight   = 1
 cmap     = "inferno"
 
 [ERA5]
-source = "DATA/ta300/ERA5/ta300_era5_moda_pl_19590101-20220831.nc"
+source = DATA/ta300/ERA5/ERA5_ta300.nc
 weight = 1 
 
 ###########################################################################
@@ -995,7 +985,7 @@ weight   = 1
 cmap     = "PiYG"
 
 [ERA5]
-source 				= "DATA/ua850/ERA5/ua850_era5_moda_pl_19590101-20220831.nc"
+source 				= DATA/ua850/ERA5/ERA5_ua850.nc
 weight 			  = 1 
 relationships = "850hPaNorthwardWind/ERA5"
 
@@ -1006,7 +996,7 @@ weight   = 1
 cmap     = "PiYG"
 
 [ERA5]
-source 				= "DATA/ua500/ERA5/ua500_era5_moda_pl_19590101-20220831.nc"
+source 				= DATA/ua500/ERA5/ERA5_ua500.nc
 weight  		  = 1 
 relationships = "500hPaNorthwardWind/ERA5"
 
@@ -1017,7 +1007,7 @@ weight   = 1
 cmap     = "PiYG"
 
 [ERA5]
-source 				= "DATA/ua300/ERA5/ua300_era5_moda_pl_19590101-20220831.nc"
+source 				= DATA/ua300/ERA5/ERA5_ua300.nc
 weight 			  = 1 
 relationships = "300hPaNorthwardWind/ERA5"
 
@@ -1027,7 +1017,7 @@ weight   = 1
 cmap     = "PiYG"
 
 [ERA5]
-source 				= "DATA/ua200/ERA5/ua200_era5_moda_pl_19590101-20220831.nc"
+source 				= DATA/ua200/ERA5/ERA5_ua200.nc
 weight   			= 1 
 relationships = "200hPaNorthwardWind/ERA5"
 
@@ -1038,7 +1028,7 @@ cmap     = "PiYG"
 weight   = 1 
 
 [ERA5]
-source = "DATA/va850/ERA5/va850_era5_moda_pl_19590101-20220831.nc"
+source = DATA/va850/ERA5/ERA5_va850.nc
 weight = 1 
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -1048,7 +1038,7 @@ cmap     = "PiYG"
 weight   = 1 
 
 [ERA5]
-source = "DATA/va500/ERA5/va500_era5_moda_pl_19590101-20220831.nc"
+source = DATA/va500/ERA5/ERA5_va500.nc
 weight = 1 
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -1058,7 +1048,7 @@ cmap     = "PiYG"
 weight   = 1 
 
 [ERA5]
-source = "DATA/va300/ERA5/va300_era5_moda_pl_19590101-20220831.nc"
+source = DATA/va300/ERA5/ERA5_va300.nc
 weight = 1 
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -1068,7 +1058,7 @@ cmap     = "PiYG"
 weight   = 1 
 
 [ERA5]
-source = "DATA/va200/ERA5/va200_era5_moda_pl_19590101-20220831.nc"
+source = DATA/va200/ERA5/ERA5_va200.nc
 weight = 1 
 
 ###########################################################################
